--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ label {
 }
 
 input[type="text"],
-input[type="number"] {
+input[type="number"],select,option{
     padding: 8px;
     margin-bottom: 10px;
     border: 1px solid #ccc;
@@ -104,3 +104,4 @@ input:focus {
 .update-alert,.add-alert{
     background-color: seagreen;
 }
+
